images_dialogs = [
    'brushes-dialog-clipboard.png',
    'brushes-dialog-grid-view.png',
    'brushes-dialog-list-view.png',
    'brushes-dialog-simple.png',
    'brushes-editor-dialog.png',
    'buffers-dialog-grid.png',
    'buffers-dialog.png',
    'channel-masks-example.png',
    'channel-masks-gradient-1.png',
    'channel-masks-gradient-2.png',
    'channel-masks-gradient-3.png',
    'channel-quickmask.png',
    'channels-dialog.png',
    'color-CMYK.png',
    'color-dialog.png',
    'color-palette.png',
    'color-scale.png',
    'color-triangle.png',
    'color-watercolor.png',
    'colormap-dialog.png',
    'css-keywords.png',
    'dashboard-context-menu.png',
    'dashboard-dialog.png',
    'device-status.png',
    'dialogs-templates-edit-advanced.png',
    'document-history-context-menu.png',
    'error-console.png',
    'export-gif-dialog.png',
    'export-heif-dialog.png',
    'export-image-dialog.png',
    'export-jpeg-dialog.png',
    'export-mng-dialog.png',
    'export-png-dialog.png',
    'export-tiff-dialog.png',
    'export-webp-dialog.png',
    'file-context-menu.png',
    'folder-context-menu.png',
    'fonts-dialog.png',
    'fonts-grid-dialog.png',
    'gradient-dialog.png',
    'gradient-editor-dialog.png',
    'histogram-basic-dialog.png',
    'histogram-range.png',
    'histogram-rgb.png',
    'history.png',
    'image-mode-indexed.png',
    'images-dialog.png',
    'import-pdf-dialog.png',
    'import-ps-dialog.png',
    'keyboard-shortcuts-assign.png',
    'keyboard-shortcuts-dialog.png',
    'layer-dialog.png',
    'layer-group-fold-unfold.png',
    'layer-group-mask.png',
    'layer-group-merge-in.png',
    'layer-group-merge-out.png',
    'layer-group-original.png',
    'layer-group-visibility.png',
    'layer-group.png',
    'layer-mask-add.png',
    'layers_example.png',
    'layers_overview.png',
    'mypaint-brushes-dialog-simple.png',
    'mypaint-brushes-dialog.png',
    'navigation.png',
    'open-image-dialog.png',
    'open-image-search.png',
    'palette-editor-dialog.png',
    'palette-import-dialog.png',
    'palettes-grid-dialog.png',
    'palettes-list-dialog.png',
    'palettes-sort.png',
    'paths-dialog.png',
    'patterns-dialog-clipboard.png',
    'patterns-dialog-grid.png',
    'patterns-dialog-list.png',
    'pointer-dialog.png',
    'sample-points-dialog.png',
    'save-image-dialog.png',
    'symmetry-mandala-ex1.png',
    'symmetry-mandala-ex2.png',
    'symmetry-mandala.png',
    'symmetry-mirror-ex1.png',
    'symmetry-mirror-ex2.png',
    'symmetry-mirror.png',
    'symmetry-painting.png',
    'symmetry-tiling-ex1.png',
    'symmetry-tiling-ex2.png',
    'symmetry-tiling.png',
    'symmetry.png',
    'templates-dialog.png',
    'tool-preset-editor.png',
    'tool-presets-dialog.png',
    'undo-history-dialog.png',
    'welcome-dialog-personalize.png',
    'welcome-dialog.png',
    'wilber-channels-alpha.png',
    'wilber-channels-blue.png',
    'wilber-channels-combined.png',
    'wilber-channels-green.png',
    'wilber-channels-red.png',
]

subdir('examples')