images_filters = [
    'use_entire_layer.jpg',
    'use_selection_only.jpg',
]

subdir('animation')
subdir('artistic')
subdir('blur')
subdir('combine')
subdir('common')
subdir('decor')
subdir('distort')
subdir('edge-detect')
subdir('enhance')
subdir('examples')
subdir('generic')
subdir('light-and-shadow')
subdir('map')
subdir('noise')
subdir('render')
subdir('web')
