images_glossary = [
    'alias.png',
    'alpha-channel-0.png',
    'alpha-channel-1.png',
    'alpha-channel-2.png',
    'alpha-channel-3a.png',
    'alpha-channel-3b.png',
    'antialias.png',
    'bezier-curve.png',
    'color-model-additive.png',
    'color-model-subtractive.png',
    'colorcircle.png',
    'companding-curves-compared.png',
    'feather.png',
    'modes-behind.png',
    'modes-colorerase.png',
    'modes-normal2.png',
    'tool-opt-increment.png',
    'tool-opt-nonincrement.png',
]
