images_math = [
    'displace0.png',
    'displace1.png',
    'displace2.png',
    'displace3.png',
    'displace4.png',
    'displace5.png',
    'layer-mode-addition.png',
    'layer-mode-burn.png',
    'layer-mode-darken.png',
    'layer-mode-difference.png',
    'layer-mode-divide.png',
    'layer-mode-dodge.png',
    'layer-mode-example.png',
    'layer-mode-grainextract.png',
    'layer-mode-grainmerge.png',
    'layer-mode-hard-light1.png',
    'layer-mode-hard-light2.png',
    'layer-mode-lighten.png',
    'layer-mode-multiply.png',
    'layer-mode-normal.png',
    'layer-mode-overlay.png',
    'layer-mode-screen.png',
    'layer-mode-soft-light1.png',
    'layer-mode-soft-light2.png',
    'layer-mode-subtract.png',
]
