images_menus = [
    'colors.png',
    'edit.png',
    'file.png',
    'filters.png',
    'help.png',
    'image-menu-bar.png',
    'image.png',
    'layer.png',
    'select.png',
    'taj_orig_2.png',
    'tools.png',
    'view.png',
    'windows.png',
]

subdir('colors')
subdir('edit')
subdir('file')
subdir('filters')
subdir('help')
subdir('image')
subdir('layer')
subdir('select')
subdir('view')
subdir('windows')
