images_preferences = [
    'input-controllers-action.png',
    'input-controllers-keyboard.png',
    'input-controllers-wheel.png',
    'input-controllers.png',
    'input-devices-tablet.png',
    'input-devices.png',
    'normal-title-bar.png',
    'prefs-canvas-interaction-modifiers.png',
    'prefs-canvas-interaction-snapping.png',
    'prefs-canvas-interaction.png',
    'prefs-color-management.png',
    'prefs-debugging.png',
    'prefs-default-grid.png',
    'prefs-default-new-image.png',
    'prefs-dialog-defaults.png',
    'prefs-display.png',
    'prefs-folders-brush.png',
    'prefs-folders.png',
    'prefs-help.png',
    'prefs-icon-theme.png',
    'prefs-image-window-appearance.png',
    'prefs-image-window-title.png',
    'prefs-image-window.png',
    'prefs-import-export.png',
    'prefs-interface.png',
    'prefs-list.png',
    'prefs-padding-none.jpg',
    'prefs-padding-with.jpg',
    'prefs-playground.png',
    'prefs-system-resources.png',
    'prefs-theme.png',
    'prefs-tool-options.png',
    'prefs-toolbox.png',
    'prefs-window-management.png',
    'utility-title-bar.png',
]
